--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "13.5.6",
+    "peerjs": "^1.5.2",
     "react": "^18",
     "react-dom": "^18",
     "socket.io": "^4.7.4",
@@ -20,6 +21,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
+    "postcss-nesting": "^12.0.3",
     "tailwindcss": "^3"
   }
 }
