--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "react": "^18",
     "react-dom": "^18",
     "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4"
+    "socket.io-client": "^4.7.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
-    "postcss": "^8",
+    "postcss": "^8.4.35",
     "postcss-nesting": "^12.0.3",
-    "tailwindcss": "^3"
+    "tailwindcss": "^3.4.1"
   }
 }
