--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "max-stream",
+  "name": "goggle-meet-clone",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,21 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.294.0",
     "next": "13.5.6",
-    "peerjs": "^1.5.2",
+    "peerjs": "^1.5.1",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
-    "react-player": "^2.14.1",
-    "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4",
+    "react-player": "^2.13.0",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
-    "postcss": "^8.4.35",
-    "postcss-nesting": "^12.0.3",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8",
+    "postcss-nesting": "^12.0.1",
+    "tailwindcss": "^3"
   }
 }
